...
    <string name="dialog_fragment_edit_collection_name">Edit collection name</string>
    <string name="dialog_fragment_new_collection">New collection</string>


    <!-- Authentication  -->

    <string name="tv_heading_sign_in">Sign In</string>
    <string name="tv_heading_create_account">Create Account</string>
    <string name="tv_label_name">Name</string>
    <string name="tv_label_email">Email</string>
    <string name="tv_label_password">Password</string>
    <string name="tv_hint_password">Password have to be at least 6 characters</string>

    <string name="input_required_field">Required field</string>
    <string name="input_password_length_requirement"> Password must be at least 6 characters</string>
    <string name="input_invalid_email_format"> Invalid email format</string>
    <string name="account_with_email_already_exist"> Email address is already in use by another account </string>
    <string name="email_verification_sent"> A verification email has been sent.</string>

    <string name="email_address_not_verified"> Email address has not been verified </string>
    <string name="snackBar_action_resend">Resend</string>
    <string name="input_wrong_password">Wrong password</string>
    <string name="input_user_no_exist">No user exists with this email address</string>
    <string name="login_fb_failed">Failed to sign in with facebook, please try again</string>

    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_create_account">Create Account</string>
    <string name="tv_q_no_account_yet">Don\'t have an account yet?</string>
    <string name="et_password_label">Password</string>
...
    <string name="tv_forgot_password">Forgot your password?</string>
    <string name="iv_desc_exit_reset_password_fragment">Exit reset password</string>
    <string name="iv_desc_exit_sign_in_email_fragment">Exit sign in with email</string>
    <string name="btn_sign_in_email">Sign in with email</string>
    <string name="btn_sign_in_google">Sign in with Google</string>
    <string name="btn_sign_in_facebook">Sign in with Facebook</string>
    <string name="tv_headline_reset_password">Reset password</string>
    <string name="btn_send_reset_password_email">Send</string>
    <string name="snackbar_unknown_error">An error occurred, please try again later</string>
    <string name="snackbar_offline">You are offline, connect to internet and try again</string>
    <string name="btn_sign_in">Sign in</string>

    <string name="snackbar_reset_password_email">"A reset password email has been sent "</string>

    <string name="close_create_account">close create account</string>

    <string name="close_reset_password">close reset password</string>

    <string name="sign_in_failed">Sign in failed, please try again</string>
...
