<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    android:id="@+id/fragment_reset_password"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <ImageButton
        android:id="@+id/btn_navigate_back"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/iv_desc_exit_reset_password_fragment"
        android:src="@drawable/ic_arrow_back" />

    <ImageButton
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:id="@+id/btn_close_reset_password"
        android:layout_gravity="end"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/close_reset_password"
        android:src="@drawable/ic_close_on_dark_grey"
        />

    <TextView
        android:text="@string/tv_headline_reset_password"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_et_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/et_email_label"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Qfilm.Button"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:id="@+id/btn_send_email_reset_password"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_reset_password_email" />

</LinearLayout>